# FastAPI-genAI-01

hello-fastapi/: README.md  pyproject.toml
hello-fastapi/todos/: main.py
