[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Athar Atta <atharatta2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"

[tool.poetry.scripts]
dev = "todos.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
